# commits-metadata

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  exporter.py  main.py  models.py  ui.py
app/automation/: __init__.py  scheduler.py  webhook.py
app/discovery/: __init__.py  scanner.py
app/github/: __init__.py  client.py  rate_limiter.py  url_parser.py
app/jobqueue/: __init__.py  job_queue.py
app/observability/: telemetry.py
app/processing/: __init__.py  diff_extractor.py  engine.py  file_classifier.py  llm_analyzer.py  rule_engine.py  schema_builder.py  validator.py
app/schema/: feature_metadata.schema.json
app/search/: __init__.py  embeddings.py  feature_index.py  recommender.py  related.py  tokenizer.py
app/storage/: stores.py
docs/: architecture.md
postman/: commits-metadata.postman_collection.json
tests/: conftest.py  test_api.py  test_automation.py  test_diff_extractor.py  test_discovery.py  test_embeddings.py  test_engine.py  test_feature_index.py  test_file_classifier.py  test_github_client.py  test_job_queue.py  test_rate_limiter.py  test_recommender.py  test_related.py  test_related_api.py  test_rule_engine.py  test_schema_builder.py  test_search_api.py  test_storage.py  test_tokenizer.py  test_url_parser.py  test_validator.py
